k8s/adminsb-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: labsavvy-adminsandbox
  name: adminsandbox-labsavvy-deployment
  namespace: sandbox
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: labsavvy-adminsandbox
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: labsavvy-adminsandbox
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: development
        - name: REACT_APP_BACKEND_URL
          value: https://apisb.labsavvy.com
        - name: PUBLIC_URL
          value: https://adminsb.labsavvy.com
        image: gcr.io/ls-sandbox-v1/adminsb_server:XXXX
        imagePullPolicy: Always
        name: labsavvy-adminsandbox
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/healthz/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
            httpHeaders:
            - name: Custom-Header
              value: OK
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          limits:
            cpu: 250m
          requests:
            cpu: 200m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: labsavvy-adminsandbox
  name: adminsandbox-service
  namespace: sandbox
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32421
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: labsavvy-adminsandbox
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
