k8s/dev-api-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: karkee-app-staging
  name: api-staging-deployment
  namespace: ingress-nginx
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: karkee-app-staging
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: karkee-app-staging
    spec:
      containers:
      - command:
        - php
        - yii
        - serve
        - --docroot="apicarkee/web"
        image: fdc101082/dev.api.karkee.biz:app-api-1
        imagePullPolicy: Always
        name: karkee-app-staging
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 50m
          requests:
            cpu: 20m
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: karkee-app-staging
  name: api-service
  namespace: ingress-nginx
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32100
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: karkee-app-staging
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
