k8s/dev-mysql-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: development
  labels:
    app: karkee-app-staging-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karkee-app-staging-mysql
  template:
    metadata:
      labels:
        app: karkee-app-staging-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            subPath: "mysql"
            name: mysql-data
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data-disk
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: karkee-app-staging-mysql
  name: mysql-service
  namespace: development
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32131
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: karkee-app-staging-mysql
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
