k8s/dev-phpmyadmin-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  namespace: development
  labels:
    app: karkee-app-staging-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karkee-app-staging-phpmyadmin
  template:
    metadata:
      labels:
        app: karkee-app-staging-phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: karkee-app-staging-phpmyadmin
  name: phpmyadmin-service
  namespace: development
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 32132
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: karkee-app-staging-phpmyadmin
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
