k8s/deployment-phpmyadmin-working.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: development
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 3306
        volumeMounts:
          - mountPath: "/var/lib/mysql"
            subPath: "mysql"
            name: mysql-data
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data-disk
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  namespace: development
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.2"
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: development
spec:
  type: NodePort
  selector:
    app: phpmyadmin
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"    
  name: phpmyadmin-staging-ingress
  namespace: development
spec:
  tls:
  - hosts:
    - phpmyadmin.staging.karkee.biz
    secretName: karkee-staging-secret
  rules:
  - host: phpmyadmin.staging.karkee.biz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: phpmyadmin-service
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"    
  name: karkee-staging-ingress
  namespace: development
spec:
  tls:
  - hosts:
    - api.staging.karkee.biz
    secretName: karkee-staging-secret
  rules:
  - host: api.staging.karkee.biz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
            service:
              name: mysql-service
              port:
                number: 80
